Update war names

--- a/GFM/localisation/00000_1830 loc.csv
+++ b/GFM/localisation/00000_1830 loc.csv
@@ -53,10 +53,8 @@ EVTNAME127853;The Rebellion is Crushed;;;;;;;;;;;;;
 EVTDESC127853;Today, the remainder of the Polish army of over 20,000 men crossed the Russian frontier and laid down their arms at Brodnica in preference to submission to Russia, being the last resistance in Poland. The war in the course of which 120 battles and skirmishes were fought and forty thousand Polish killed, came to a speedy end in $YEAR$. The tzar passed laws and edicts to make the land an integral part of Russia's territory and decided how to deal with the rebels.;;;;;;;;;;;;;
 EVTOPT127853A;There will be harsh reprisals.;;;;;;;;;;;;;
 EVTOPT127853B;Be lenient with them.;;;;;;;;;;;;;
-AGRESSION_WAR_CONQUEST_ANY_NAME_RUS_POL;The January Uprising;;;;;;;;;;;;;
-NORMAL_WAR_CONQUEST_ANY_NAME_RUS_POL;The January Uprising;;;;;;;;;;;;;
-AGRESSION_WAR_CONQUEST_ANY_NAME_RUS_LIT;The January Uprising;;;;;;;;;;;;;
-NORMAL_WAR_CONQUEST_ANY_NAME_RUS_LIT;The January Uprising;;;;;;;;;;;;;
+AGRESSION_WAR_CONQUEST_ANY_NAME_RUS_PLR;The January Uprising;;;;;;;;;;;;;
+NORMAL_WAR_CONQUEST_ANY_NAME_RUS_PLR;The January Uprising;;;;;;;;;;;;;
 bahawalpur_treaty_title;Subsidiary Alliance with Bahawalpur;;;;;;;;;;;;;
 bahawalpur_treaty_desc;Bahawalpur has been continually threatened by the Sikh Empire on its western border. To the Nawab, British suzerainty seems a better alternative than conquest by the Sikhs. Therefore we should sign a treaty of protection with Bahawalpur to extend our rule in India.;;;;;;;;;;;;;
 male_desc;The Malês, groups of Muslim African slaves from West Africa, planned a revolt against the townspeople and their masters. For years these men have been transformed into mere objects, used for nothing but tiring work, their freedom? Nothing but a fragment of a distant past. But today is the day they fight to regain such freedom. Today their arms will break the shackles chaining them to the Pelourinho for another round of whips. Or so they claim.;;;;;;;;;;;;;
@@ -236,10 +234,18 @@ LONDONCONFERENCENOGRE;The Ottomans have refused to turn over the land they were 
 LONDONCONFERENCENOGPS;We and the other two great powers guaranteeing Greek independence held a conference in London to establish Greece's permanent government and definitively delineate its borders. In lieu of this, the three guarantors--Russia, France and the UK--decided to install Otto Friedrich Ludwig von Bayern as the Greek king and extend the border North to the so-called Volos-Arta line. This has, however, infuriated the Ottomans, who refuse to amend the more favorable border agreed on in 1830. They have begun a full-scale invasion of Greece, and it is our duty to protect it.;;;;;;;;;;;;;
 LONDONCONFENOGPSTUR;The Greek government has refused to abide by the terms of the London Conference in which France, Russia and the UK, the three guarantors of Greek independence, agreed on Greece's final borders and form of government. The insistance on having a Bavarian catholic be installed on the Greek throne was simply unacceptable. However, by rejecting the terms of the powers that had had its back, Greece has foolishly lost its international protection. We can use this opportunity to declare war on them to put an end to Greek independence.;;;;;;;;;;;;;
 LONDONCONFEYESBUTNOGPS;We and the other two great powers guaranteeing Greek independence held a conference in London to establish Greece's permanent government and definitively delineate its borders. In lieu of this, the three guarantors, Russia, France and the UK, decided to install Otto Friedrich Ludwig von Bayern as Greek king and to extend the border North to the so-called Volos-Arta line. This has, however, infuriated the Greeks, who refuse to have a catholic Bavarian be put on their throne. With the Greeks having refused to abide by our resolution, if the Ottomans were to attack them, we would have no basis to intervene.;;;;;;;;;;;;;
-AGRESSION_PUNITIVE_EXPEDITION_WAR_NAME_FRA_RGA;The Capture of Bône;;;;;;;;;;;;;
-NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_FRA_RGA;The Capture of Bône;;;;;;;;;;;;;
+AGRESSION_PUNITIVE_EXPEDITION_WAR_NAME_FRA_LBY;The Capture of Bône;;;;;;;;;;;;;
+NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_FRA_LBY;The Capture of Bône;;;;;;;;;;;;;
+AGRESSION_PUNITIVE_EXPEDITION_WAR_NAME_BOR_LBY;The Capture of Bône;;;;;;;;;;;;;
+NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_BOR_LBY;The Capture of Bône;;;;;;;;;;;;;
 AGRESSION_PUNITIVE_EXPEDITION_WAR_NAME_FRA_ABA;The Capture of Bougie;;;;;;;;;;;;;
 NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_FRA_ABA;The Capture of Bougie;;;;;;;;;;;;;
+AGRESSION_PUNITIVE_EXPEDITION_WAR_NAME_BOR_ABA;The Capture of Bougie;;;;;;;;;;;;;
+NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_BOR_ABA;The Capture of Bougie;;;;;;;;;;;;;
+AGRESSION_PUNITIVE_EXPEDITION_WAR_NAME_FRA_ALD;The Capture of Oran;;;;;;;;;;;;;
+NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_FRA_ALD;The Capture of Oran;;;;;;;;;;;;;
+AGRESSION_PUNITIVE_EXPEDITION_WAR_NAME_BOR_ALD;The Capture of Oran;;;;;;;;;;;;;
+NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_BOR_ALD;The Capture of Oran;;;;;;;;;;;;;
 bone_french_war_title;The Capture of Bône;;;;;;;;;;;;;
 bone_french_war_desc;We suspect the Ottoman troops in the Algerian city of Bîne are not equipped nor trained well enough to face our army. An ambush on the city's shores could possibly spell victory for us, should we strike swiftly enough and do plenty of reconnaissance beforehand to assist us.;;;;;;;;;;;;;
 bougie_french_war_title;The Capture of Bougie;;;;;;;;;;;;;
