new kingdom lol

--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -583,3 +583,6 @@ TCA_radical;Republican Party;;;;;;;;;;;;;
 TCA_socialist;Social Democratic Party;;;;;;;;;;;;;
 TCA_communist;Communist Party;;;;;;;;;;;;;
 TCA_fascist;Iron Wolves;;;;;;;;;;;;;
+NRB_absolute_monarchy;Nieuwe Koningrijk;;;;;;;;;;;;;
+NRB_prussian_constitutionalism;Nieuwe Koningrijk;;;;;;;;;;;;;
+NRB_hms_government;Nieuwe Koningrijk;;;;;;;;;;;;;
