--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -586,3 +586,15 @@ TCA_fascist;Iron Wolves;;;;;;;;;;;;;
 NRB_absolute_monarchy;Nieuwe Koningrijk;;;;;;;;;;;;;
 NRB_prussian_constitutionalism;Nieuwe Koningrijk;;;;;;;;;;;;;
 NRB_hms_government;Nieuwe Koningrijk;;;;;;;;;;;;;
+SOV_fascist_dictatorship;The All-Russian State;;;;;;;;;;;;;
+SOV_absolute_monarchy;The Russian Empire;;;;;;;;;;;;;
+SOV_prussian_constitutionalism;The Russian Empire;;;;;;;;;;;;;
+SOV_hms_government;The Russian Empire;;;;;;;;;;;;;
+SOV_absolute_empire;The Russian Empire;;;;;;;;;;;;;
+SOV_semi_constitutional_empire;The Russian Empire;;;;;;;;;;;;;
+SOV_constitutional_empire;The Russian Empire;;;;;;;;;;;;;
+SOV_democracy;The Russian Republic;;;;;;;;;;;;;
+SOV_presidential_dictatorship;Russia;;;;;;;;;;;;;
+SOV_absolute_monarchy;Russian Empire;;;;;;;;;;;;;
+SOV_prussian_constitutionalism;Russian Empire;;;;;;;;;;;;;
+SOV_ADJ;Russian;;;;;;;;;;;;;
