UBD mirror + MON update + PHL mon flag

--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -598,3 +598,6 @@ SOV_presidential_dictatorship;Russia;;;;;;;;;;;;;
 SOV_absolute_monarchy;Russian Empire;;;;;;;;;;;;;
 SOV_prussian_constitutionalism;Russian Empire;;;;;;;;;;;;;
 SOV_ADJ;Russian;;;;;;;;;;;;;
+UBD_absolute_empire;Livonia;;;;;;;;;;;;;
+UBD_semi_constitutional_empire;Livonia;;;;;;;;;;;;;
+UBD_constitutional_empire;Livonia;;;;;;;;;;;;;
