--- a/GFM/localisation/00_GSG_countries.csv
+++ b/GFM/localisation/00_GSG_countries.csv
@@ -54,7 +54,7 @@ aromanian;Aromanian;;;;;;;;;;;;;
 romansh;Romansh;;;;;;;;;;;;;
 UBD_absolute_monarchy;United Baltic Duchy;;;;;;;;;;;;;
 UBD_prussian_constitutionalism;United Baltic Duchy;;;;;;;;;;;;;
-UBD_hms_government;Livonia;;;;;;;;;;;;;
+UBD_hms_government;United Baltic Duchy;;;;;;;;;;;;;
 UBD_fascist_dictatorship;Baltic State;;;;;;;;;;;;;
 UBD_presidential_dictatorship;Livonia;;;;;;;;;;;;;
 ITA_fascist_dictatorship;Italian Social Republic;;;;;;;;;;;;;
