forgor country renames

--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -592,3 +592,4 @@ XBI_colonial_company_4;Seihoku Chiho;;;;;;;;;;;;;
 XIN_colonial_company_4;Shinkyo Jichi-Seifu;;;;;;;;;;;;;
 YAK_colonial_company_4;Yakuto Jichi-Ku;;;;;;;;;;;;;
 GRE_colonial_company_4;Regno di Grecia;;;;;;;;;;;;;
+FIN_colonial_company_4;Hertigdömet Finland;;;;;;;;;;;;;
