--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -601,3 +601,9 @@ SOV_ADJ;Russian;;;;;;;;;;;;;
 UBD_absolute_empire;Livonia;;;;;;;;;;;;;
 UBD_semi_constitutional_empire;Livonia;;;;;;;;;;;;;
 UBD_constitutional_empire;Livonia;;;;;;;;;;;;;
+UBD_democracy;The Baltic Republic;;;;;;;;;;;;;
+UBD_presidential_dictatorship;The Baltic State;;;;;;;;;;;;;
+UBD_fascist_dictatorship;Aestia;;;;;;;;;;;;;
+UBD_absolute_monarchy;The United Baltic Duchy;;;;;;;;;;;;;
+UBD_prussian_constitutionalism;The United Baltic Duchy;;;;;;;;;;;;;
+UBD_hms_government;The United Baltic Duchy;;;;;;;;;;;;;
