--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -607,3 +607,5 @@ UBD_fascist_dictatorship;Aestia;;;;;;;;;;;;;
 UBD_absolute_monarchy;The United Baltic Duchy;;;;;;;;;;;;;
 UBD_prussian_constitutionalism;The United Baltic Duchy;;;;;;;;;;;;;
 UBD_hms_government;The United Baltic Duchy;;;;;;;;;;;;;
+UBD_strenghten_governorship_title;Strenghten Our Governorship;;;;;;;;;;;;;
+UBD_strenghten_governorship_desc;Despite technically being separate, the three Baltic governorates - Livonia, Estland and Courland have shared the same governor since 1800. If we were able to project enough power in our governorates, we might be able to de facto control all of them, despite the reality on paper being different. But who knows? Perhaps the Tsar would be partial to allow this fait accompli...;;;;;;;;;;;;;
