--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -603,6 +603,7 @@ UBD_semi_constitutional_empire;Livonia;;;;;;;;;;;;;
 UBD_constitutional_empire;Livonia;;;;;;;;;;;;;
 UBD_democracy;The Baltic Republic;;;;;;;;;;;;;
 UBD_presidential_dictatorship;The Baltic State;;;;;;;;;;;;;
+UBD_radical_republic;The Livonian Republic;;;;;;;;;;;;;
 UBD_fascist_dictatorship;Aestia;;;;;;;;;;;;;
 UBD_absolute_monarchy;The United Baltic Duchy;;;;;;;;;;;;;
 UBD_prussian_constitutionalism;The United Baltic Duchy;;;;;;;;;;;;;
