--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -92,7 +92,7 @@ PROV4030;Käkisalmi;;;;;;;;;
 PROV2458;Agûarápuaba;;;;;;;;;
 PROV2460;Ipáuzandu;;;;;;;;;
 PROV2453;Arasátyba;;;;;;;;;
-PROV3987;Exoaladi;;;;;;;;;
+PROV3987;Guazyéro;;;;;;;;;
 PROV2419;Anhanduhy;;;;;;;;;
 PROV2418;Ajkulula;;;;;;;;;
 PROV2423;Krikahâzawre;;;;;;;;;
