--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1124,7 +1124,7 @@ PROV4086;Timiskaming;;;;;;;;;;;;;
 PROV4087;Angostura;;;;;;;;;;;;;
 PROV4088;Queenstown;;;;;;;;;;;;;
 PROV4092;Ìbúpògi;;;;;;;;;;;;;
-PROV4094;Pulmarí;;;;;;;;;;;;;
+PROV4094;Pimina;;;;;;;;;;;;;
 PROV4095;Fort Kamloops;;;;;;;;;;;;;
 PROV4096;Ayapaskawiyiniwak;;;;;;;;;;;;;
 PROV4097;Neyaashiing;;;;;;;;;;;;;
@@ -1192,6 +1192,7 @@ PROV4174;Qala-i Babajan;;;;;;;;;;;;;
 PROV4175;Fuchuan;;;;;;;;;;;;;
 PROV4176;Moghwachi;;;;;;;;;;;;;
 PROV4177;Kwahadi;;;;;;;;;;;;;
+PROV4180;Findlay;;;;;;;;;;;;;
 PRG_2338;Chaco Boreal;;;;;;;;;;;;;
 ARG_2377;Chaco Austral;;;;;;;;;;;;;
 ARG_2366;Chaco Central;;;;;;;;;;;;;
