Riga set up + radical flag

--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -624,3 +624,4 @@ EVTDESC31500010;Dire news! Apparently, the Baltic government has signed a secret
 EVTDESC31500012;As the dust settles, it is becoming increasingly clear that we must transfer power from the provisional government to a more permanent arrangement. We could crown a monarch, as is the style at this time. We could also opt to empower the local Landtags while having no monarch, becoming something of an eastern Switzerland. Finally, our generals would be willing to help solidify our new country - temporarily, of course.;;;;;;;;;;;;;
 EVTNAME60075;Restricting the Power of the Parliament;;;;;;;;;;;;;
 EVTDESC60075;Your Majesty, as the Parliament has proven itself unable to truly care for the nation, there is no other choice but to strenghten Your executive powers. With the Crown and the Parliament in balance, we certainly begin an era of enlightened rule.;;;;;;;;;;;;;
+UBD_colonial_company_4;Riga;;;;;;;;;;;;;
