--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -603,7 +603,7 @@ SLU_communist;Communist Party;;;;;;;;;;;;;
 SLU_fascist;All-Slavic National Radical Party;;;;;;;;;;;;;
 miskito_nationalists_spawned_title;Greater Mosquitia;;;;;;;;;;;;;
 miskito_nationalists_spawned_desc;The Europeans like to "claim" that "land" is theirs. Most curious! We shall embrace this concept to fit in with the rest of the civilized countries. Mosquitia's natural borders shall be, say... from here to here? Fetch me a pencil posthaste, my good sir! And the good parchment!;;;;;;;;;;;;;
-EVTDESC811;As we have now found ourselves at war with the English, the continued use of the Union Jack on our flag has given way to impracticalities of combat as well as public opposition. An official change to our flag is now simply a necessity.;;;;;;;;;;;;;
+EVTDESC811;\n\nAs we have now found ourselves at war with the English, the continued use of the Union Jack on our flag has given way to impracticalities of combat as well as public opposition. An official change to our flag is now simply a necessity.;;;;;;;;;;;;;
 KKP_absolute_empire;The Torani Empire;;;;;;;;;;;;;
 KKP_semi_constitutional_empire;The Torani Empire;;;;;;;;;;;;;
 KKP_constitutional_empire;The Torani Empire;;;;;;;;;;;;;
@@ -611,14 +611,14 @@ KKP_absolute_empire_ADJ;Torani;;;;;;;;;;;;;
 KKP_semi_constitutional_empire_ADJ;Torani;;;;;;;;;;;;;
 KKP_constitutional_empire_ADJ;Torani;;;;;;;;;;;;;
 EVTNAME811;Ordinance on the National Flag;;;;;;;;;;;;;
-EVTDESC811;With the recent unification of Italy, confusion is abound regarding the national flag. Some are seen flying Savoyard banners and a foreign match company has even printed them on their boxes as our official flag! We should make it clear that we have but one flag of Italy: it is the one with our ancient and complex dynastic achievements right in the middle.;;;;;;;;;;;;;
+EVTDESC811;\n\nWith the recent unification of Italy, confusion is abound regarding the national flag. Some are seen flying Savoyard banners and a foreign match company has even printed them on their boxes as our official flag! We should make it clear that we have but one flag of Italy: it is the one with our ancient and complex dynastic achievements right in the middle.;;;;;;;;;;;;;
 EVT811OPTA;Sign it!;;;;;;;;;;;;;
 EVTNAME812;A New Flag?;;;;;;;;;;;;;
-EVTDESC812;The current international situation of Hawai'i has made the similarity of our flag to that of Britain a problem of increasing proportions. Advisors suggest that it would be prudent if we avoided any future faux pas by adopting the personal flag of Your Majesty as the state flag of our kingdom, Union Jack gone.;;;;;;;;;;;;;
+EVTDESC812;\n\nThe current international situation of Hawai'i has made the similarity of our flag to that of Britain a problem of increasing proportions. Advisors suggest that it would be prudent if we avoided any future faux pas by adopting the personal flag of Your Majesty as the state flag of our kingdom, Union Jack gone.;;;;;;;;;;;;;
 EVT812OPTA;It only makes sense.;;;;;;;;;;;;;
 EVT812OPTB;No, Britain should change!;;;;;;;;;;;;;
-EVTDESC640;The Serbs of Vojvodina have successfully campaigned against the treasonous Hungarians and now stand at peace. Despite their apparent loyalty to our most illustrious house, perhaps it would still be prudent to quickly reintegrate them before they decide to join Serbia down south...;;;;;;;;;;;;;
-EVTDESC641;After our victory against the Hungarians, the Austrians now seek to regain control over Vojvodina. We did, in fact, fight more or less in the name of the emperor who now promises us our own crownland, but perhaps unification with Serbia would be preferable regardless...;;;;;;;;;;;;;
+EVTDESC640;\n\nThe Serbs of Vojvodina have successfully campaigned against the treasonous Hungarians and now stand at peace. Despite their apparent loyalty to our most illustrious house, perhaps it would still be prudent to quickly reintegrate them before they decide to join Serbia down south...;;;;;;;;;;;;;
+EVTDESC641;\n\nAfter our victory against the Hungarians, the Austrians now seek to regain control over Vojvodina. We did, in fact, fight more or less in the name of the emperor who now promises us our own crownland, but perhaps unification with Serbia would be preferable regardless...;;;;;;;;;;;;;
 ENG_absolute_empire;Great Britain;;;;;;;;;;;;;
 ENG_semi_constitutional_empire;Great Britain;;;;;;;;;;;;;
 ENG_constitutional_empire;Great Britain;;;;;;;;;;;;;
@@ -664,17 +664,17 @@ UBD_hms_government;The United Baltic Duchy;;;;;;;;;;;;;
 UBD_prov_gov_conservative;The Baltic Provinces;;;;;;;;;;;;;
 UBD_strenghten_governorship_title;Strenghten Our Governorship;;;;;;;;;;;;;
 UBD_strenghten_governorship_desc;Despite technically being separate, the three Baltic governorates - Livonia, Estland and Courland have shared the same governor since 1800. If we were able to project enough power in our governorates, we might be able to de facto control all of them, despite the reality on paper being different. But who knows? Perhaps the Tsar would be partial to allow this fait accompli...;;;;;;;;;;;;;
-EVTNAME31500002;Baltic Governor Strenghtens Power;;;;;;;;;;;;;
-EVTDESC31500002;Despite technically being separate, the three Baltic governorates - Livonia, Estland and Courland have shared the same governor since 1800. The current governor has managed to assert his authority enough that any divisions remain but on paper. Do we allow the governorates to be merged into one entity, or do we replace the governor with a less ambitious man?;;;;;;;;;;;;;
-EVTNAME31500003;The Baltic German Plea For Help;;;;;;;;;;;;;
-EVTDESC31500003;An envoy has arrived from Riga under mundane pretext - in reality bearing a serious message. It would seem that the Russians seek to end the Ostsee Rights, close the German Landtags and directly incorporate the Baltic Governorates, perhaps even to subject them to Russification. The envoy asks for help - for the Germans to protect their own shall Russia try to deprive them of their rights. A secret treaty can be drafted... What is our response?;;;;;;;;;;;;;
+EVTNAME31500002;\n\nBaltic Governor Strenghtens Power;;;;;;;;;;;;;
+EVTDESC31500002;\n\nDespite technically being separate, the three Baltic governorates - Livonia, Estland and Courland have shared the same governor since 1800. The current governor has managed to assert his authority enough that any divisions remain but on paper. Do we allow the governorates to be merged into one entity, or do we replace the governor with a less ambitious man?;;;;;;;;;;;;;
+EVTNAME31500003;\n\nThe Baltic German Plea For Help;;;;;;;;;;;;;
+EVTDESC31500003;\n\nAn envoy has arrived from Riga under mundane pretext - in reality bearing a serious message. It would seem that the Russians seek to end the Ostsee Rights, close the German Landtags and directly incorporate the Baltic Governorates, perhaps even to subject them to Russification. The envoy asks for help - for the Germans to protect their own shall Russia try to deprive them of their rights. A secret treaty can be drafted... What is our response?;;;;;;;;;;;;;
 UBD_secret_treaty_title;Secret Treaty with the Germans;;;;;;;;;;;;;
 UBD_secret_treaty_desc;It is becoming more and more probable that the Tsar will decide to abolish our governorate and administrate us directly. In such an event, we would be nigh powerless to resist the Russian onslaught. Our only hope would be to sign a secret treaty with our German brothers in Berlin - that they would come defend us from Russian aggression. We cannot let ourselves become lost!;;;;;;;;;;;;;
-EVTDESC31500006;The Russians have decreed our governorate forfeit - the lands are henceforth to be administered directly as a part of Russia. We may accept - or we may resist...;;;;;;;;;;;;;
-EVTDESC31500008;The arrogant Balts led by their treacherous German landowners have, upon hearing news of our proclamation of integration, declared independence!;;;;;;;;;;;;;
-EVTDESC31500009;Per the secret treaty we have signed with the Baltic Germans, they now ask for our help against the Russians as skirmishes already mark the beginning of the Russian attempt to forcefully assimilate all of Livonia! Shall we honour the treaty?;;;;;;;;;;;;;
-EVTDESC31500010;Dire news! Apparently, the Baltic government has signed a secret defence treaty with Berlin against us - and now German troops march east to protect them!;;;;;;;;;;;;;
-EVTDESC31500012;As the dust settles, it is becoming increasingly clear that we must transfer power from the provisional government to a more permanent arrangement. We could crown a monarch, as is the style at this time. We could also opt to empower the local Landtags while having no monarch, becoming something of an eastern Switzerland. Finally, our generals would be willing to help solidify our new country - temporarily, of course.;;;;;;;;;;;;;
-EVTNAME60075;Restricting the Power of the Parliament;;;;;;;;;;;;;
-EVTDESC60075;Your Majesty, as the Parliament has proven itself unable to truly care for the nation, there is no other choice but to strenghten Your executive powers. With the Crown and the Parliament in balance, we certainly begin an era of enlightened rule.;;;;;;;;;;;;;
+EVTDESC31500006;\n\nThe Russians have decreed our governorate forfeit - the lands are henceforth to be administered directly as a part of Russia. We may accept - or we may resist...;;;;;;;;;;;;;
+EVTDESC31500008;\n\nThe arrogant Balts led by their treacherous German landowners have, upon hearing news of our proclamation of integration, declared independence!;;;;;;;;;;;;;
+EVTDESC31500009;\n\nPer the secret treaty we have signed with the Baltic Germans, they now ask for our help against the Russians as skirmishes already mark the beginning of the Russian attempt to forcefully assimilate all of Livonia! Shall we honour the treaty?;;;;;;;;;;;;;
+EVTDESC31500010;\n\nDire news! Apparently, the Baltic government has signed a secret defence treaty with Berlin against us - and now German troops march east to protect them!;;;;;;;;;;;;;
+EVTDESC31500012;\n\nAs the dust settles, it is becoming increasingly clear that we must transfer power from the provisional government to a more permanent arrangement. We could crown a monarch, as is the style at this time. We could also opt to empower the local Landtags while having no monarch, becoming something of an eastern Switzerland. Finally, our generals would be willing to help solidify our new country - temporarily, of course.;;;;;;;;;;;;;
+EVTNAME60075;\n\nRestricting the Power of the Parliament;;;;;;;;;;;;;
+EVTDESC60075;\n\nYour Majesty, as the Parliament has proven itself unable to truly care for the nation, there is no other choice but to strenghten Your executive powers. With the Crown and the Parliament in balance, we certainly begin an era of enlightened rule.;;;;;;;;;;;;;
 UBD_colonial_company_4;Riga;;;;;;;;;;;;;
