--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -609,9 +609,9 @@ UBD_absolute_monarchy;The United Baltic Duchy;;;;;;;;;;;;;
 UBD_prussian_constitutionalism;The United Baltic Duchy;;;;;;;;;;;;;
 UBD_hms_government;The United Baltic Duchy;;;;;;;;;;;;;
 UBD_prov_gov_conservative;The Baltic Provinces;;;;;;;;;;;;;
-UBD_strenghten_governorship_title;Strenghten Our Governorship;;;;;;;;;;;;;
+UBD_strenghten_governorship_title;Strengthen Our Governorship;;;;;;;;;;;;;
 UBD_strenghten_governorship_desc;Despite technically being separate, the three Baltic governorates - Livonia, Estland and Courland have shared the same governor since 1800. If we were able to project enough power in our governorates, we might be able to de facto control all of them, despite the reality on paper being different. But who knows? Perhaps the Tsar would be partial to allow this fait accompli...;;;;;;;;;;;;;
-EVTNAME31500002;Baltic Governor Strenghtens Power;;;;;;;;;;;;;
+EVTNAME31500002;Baltic Governor strengthens Power;;;;;;;;;;;;;
 EVTDESC31500002;Despite technically being separate, the three Baltic governorates - Livonia, Estland and Courland have shared the same governor since 1800. The current governor has managed to assert his authority enough that any divisions remain but on paper. Do we allow the governorates to be merged into one entity, or do we replace the governor with a less ambitious man?;;;;;;;;;;;;;
 EVTNAME31500003;The Baltic German Plea For Help;;;;;;;;;;;;;
 EVTDESC31500003;An envoy has arrived from Riga under mundane pretext - in reality bearing a serious message. It would seem that the Russians seek to end the Ostsee Rights, close the German Landtags and directly incorporate the Baltic Governorates, perhaps even to subject them to Russification. The envoy asks for help - for the Germans to protect their own shall Russia try to deprive them of their rights. A secret treaty can be drafted... What is our response?;;;;;;;;;;;;;
@@ -623,5 +623,5 @@ EVTDESC31500009;Per the secret treaty we have signed with the Baltic Germans, th
 EVTDESC31500010;Dire news! Apparently, the Baltic government has signed a secret defence treaty with Berlin against us - and now German troops march east to protect them!;;;;;;;;;;;;;
 EVTDESC31500012;As the dust settles, it is becoming increasingly clear that we must transfer power from the provisional government to a more permanent arrangement. We could crown a monarch, as is the style at this time. We could also opt to empower the local Landtags while having no monarch, becoming something of an eastern Switzerland. Finally, our generals would be willing to help solidify our new country - temporarily, of course.;;;;;;;;;;;;;
 EVTNAME60075;Restricting the Power of the Parliament;;;;;;;;;;;;;
-EVTDESC60075;Your Majesty, as the Parliament has proven itself unable to truly care for the nation, there is no other choice but to strenghten Your executive powers. With the Crown and the Parliament in balance, we certainly begin an era of enlightened rule.;;;;;;;;;;;;;
+EVTDESC60075;Your Majesty, as the Parliament has proven itself unable to truly care for the nation, there is no other choice but to strengthen Your executive powers. With the Crown and the Parliament in balance, we certainly begin an era of enlightened rule.;;;;;;;;;;;;;
 UBD_colonial_company_4;Riga;;;;;;;;;;;;;
