you wouldn't believe it

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1106,7 +1106,7 @@ PROV4065;Thóqàhyòp;;;;;;;;;;;;;
 PROV4066;Tarija;;;;;;;;;;;;;
 PROV4067;Gakaabikaang;;;;;;;;;;;;;
 PROV4070;Canelos;;;;;;;;;;;;;
-PROV4071;San Lorenzo;;;;;;;;;;;;;
+PROV4071;Napuayllus;;;;;;;;;;;;;
 PROV4072;Contamana;;;;;;;;;;;;;
 PROV4073;Neiva;;;;;;;;;;;;;
 PROV4074;Chinanqú;;;;;;;;;;;;;
@@ -1193,6 +1193,7 @@ PROV4175;Fuchuan;;;;;;;;;;;;;
 PROV4176;Moghwachi;;;;;;;;;;;;;
 PROV4177;Kwahadi;;;;;;;;;;;;;
 PROV4180;Findlay;;;;;;;;;;;;;
+PROV4181;Quilifay;;;;;;;;;;;;;
 PRG_2338;Chaco Boreal;;;;;;;;;;;;;
 ARG_2377;Chaco Austral;;;;;;;;;;;;;
 ARG_2366;Chaco Central;;;;;;;;;;;;;
