--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10469,6 +10469,7 @@ PROV2319;Ixiamas;;;;;;;;;;;;;
 PROV2320;Huisruhuaina;Huisruhuaina;Huisruhuaina;;Huisruhuaina;;;;;;;;;
 PROV2321;Hawamano;Hawamano;Hawamano;;Hawamano;;;;;;;;;
 PROV2322;Copiapó;Copiapo;Copiapo;;Copiapó;;;;;;;;;
+PROV4182;Chañaral;Copiapo;Copiapo;;Copiapó;;;;;;;;;
 PROV2323;La Serena;La Serena;La Serena;;La Serena;;;;;;;;;
 PROV2324;Santiago;Santiago;Santiago;;Santiago;;;;;;;;;
 PROV2325;Valparaíso;Valparaiso;Valparaiso;;Valparaíso;;;;;;;;;
