a bugfix or two, amazonas-marañón border peru

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1061,7 +1061,7 @@ PROV4010;Huánuco;;;;;;;;;;;;;
 PROV4011;Katirpisa;;;;;;;;;;;;;
 PROV4012;Kashijint;;;;;;;;;;;;;
 PROV4013;Iquitos;;;;;;;;;;;;;
-PROV4014;Kukamiria;;;;;;;;;;;;;
+PROV4014;San Roque;;;;;;;;;;;;;
 PROV4015;Caballococha;;;;;;;;;;;;;
 PROV4016;Tena;;;;;;;;;;;;;
 PROV4017;San Carlos;;;;;;;;;;;;;
