Socialist Rebel now has country name ahead

--- a/GFM/localisation/00_HPM_Misc.csv
+++ b/GFM/localisation/00_HPM_Misc.csv
@@ -679,9 +679,9 @@ indian_nationalists_name;Indian Nationalists;$UNION_ADJ$ - Pan-nationalistes;$UN
 indian_nationalists_desc;Indian nationalists seek to unify the sub-continent into a free and independent nation-state, by any means necessary. This includes breaking free from foreign oppressors and uniting with their cultural kin.;;;;;;;;;;;;;
 indian_nationalists_army;Indian Nationalists;$UNION$ - Jeunes brigades;Junge $UNION$ Brigaden;;;;;;;;;;;
 socialist_rebels_title;Militant Socialist;;;;;;;;;;;;;
-socialist_rebels_name;Militant Socialists;;;;;;;;;;;;;
+socialist_rebels_name;$COUNTRY$ Militant Socialists;;;;;;;;;;;;;
 socialist_rebels_desc;In a democracy, militant socialists will seek to enforce a socialist government. In any other country, they will seek to establish a democracy with a socialist government.;;;;;;;;;;;;;
-socialist_rebels_army;Militant Socialists;;;;;;;;;;;;;
+socialist_rebels_army;$COUNTRY_ADJ$ Militant Socialists;;;;;;;;;;;;;
 christino_rebels_title;Christino;;;;;;;;;;;;;
 christino_rebels_name;Christinos;;;;;;;;;;;;;
 christino_rebels_desc;These rebels support the royal line of Ferdinand VII, and consider the current king to be a pretender. They intend to reinstall the rightful queen, and restore the liberal reforms enacted by the previous royal line.;;;;;;;;;;;;;
