--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1143,10 +1143,10 @@ PROV4110;Yulutakitsi;;;;;;;;;;;;;
 PROV4111;Ti'aî'a;;;;;;;;;;;;;
 PROV4112;Akroá;;;;;;;;;;;;;
 PROV4113;Correntina;;;;;;;;;;;;;
-PROV4114;Punta Porá;;;;;;;;;;;;;
+PROV4114;Katueté;;;;;;;;;;;;;
 PROV4115;Miranda;;;;;;;;;;;;;
 PROV4116;Santa Ana;;;;;;;;;;;;;
-PROV4117;Opaié;;;;;;;;;;;;;
+PROV4117;Taquary;;;;;;;;;;;;;
 PROV4118;Odagaamii;;;;;;;;;;;;;
 PROV4119;Chicago;;;;;;;;;;;;;
 PROV4120;Heey-otoyoo';;;;;;;;;;;;;
@@ -1194,6 +1194,9 @@ PROV4176;Moghwachi;;;;;;;;;;;;;
 PROV4177;Kwahadi;;;;;;;;;;;;;
 PROV4180;Findlay;;;;;;;;;;;;;
 PROV4181;Quilifay;;;;;;;;;;;;;
+PROV4183;Itámoroti;;;;;;;;;;;;;
+PROV4184;Sherenté;;;;;;;;;;;;;
+PROV4185;Acroamirim;;;;;;;;;;;;;
 PRG_2338;Chaco Boreal;;;;;;;;;;;;;
 ARG_2377;Chaco Austral;;;;;;;;;;;;;
 ARG_2366;Chaco Central;;;;;;;;;;;;;
