--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -6,7 +6,7 @@ PROV2446;São João D'el-Rey;;;;;;;;;
 PROV2449;Victória;;;;;;;;;
 PROV2462;Kreie-bang-rê;;;;;;;;;
 PROV2457;Curityba;;;;;;;;;
-PROV2420;Fecho dos Morros;;;;;;;;;
+PROV2420;Kadiwéu;;;;;;;;;
 PROV3556;Tumucumaque;;;;;;;;;
 PROV3560;Kahpota;;;;;;;;;
 PROV3567;Ye'pâmasa;;;;;;;;;
@@ -95,7 +95,6 @@ PROV2453;Arasátyba;;;;;;;;;
 PROV3987;Guazyéro;;;;;;;;;
 PROV2419;Anhanduhy;;;;;;;;;
 PROV2418;Ajkulula;;;;;;;;;
-PROV2423;Krikahâzawre;;;;;;;;;
 PROV2425;Karaîá'y;;;;;;;;;
 PROV2417;Aripuanã;;;;;;;;;
 PROV2550;Guamporé;;;;;;;;;
