--- a/GFM/localisation/FlavourMod_modifiers.csv
+++ b/GFM/localisation/FlavourMod_modifiers.csv
@@ -138,6 +138,7 @@ wallachian_revolution;The Wallachian Revolution;;;;;;;;;;;;;
 wallachian_revolution_desc;Libertate! Egalitate! Fraternitate!;;;;;;;;;;;;;
 king_cotton;King Cotton;;;;;;;;;;;;;
 queen_sugar;Queen Sugar;;;;;;;;;;;;;
+mate_plantation;Mate Exploitation;;;;;;;;;;;;;
 coffee_cycle;The Coffee Cycle;;;;;;;;;;;;;
 anglification;Anglification;;;;;;;;;;;;;
 anglification_desc;A large effort is currently underway in the Empire to encourage the use of English in everyday lives and the establishment of an 'Anglo-Indian' Identity in our subjects.;;;;;;;;;;;;;
