--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1197,6 +1197,8 @@ PROV4181;Quilifay;;;;;;;;;;;;;
 PROV4183;Itámoroti;;;;;;;;;;;;;
 PROV4184;Sherenté;;;;;;;;;;;;;
 PROV4185;Acroamirim;;;;;;;;;;;;;
+PROV4186;Matupiri;;;;;;;;;;;;;
+PROV4187;Popukare;;;;;;;;;;;;;
 PRG_2338;Chaco Boreal;;;;;;;;;;;;;
 ARG_2377;Chaco Austral;;;;;;;;;;;;;
 ARG_2366;Chaco Central;;;;;;;;;;;;;
