Senior Juz annexation and a rename

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -977,7 +977,7 @@ PROV3905;Leeward Islands;;;;;;;;;;;;;
 PROV3906;Rudolstadt;;;;;;;;;;;;;
 PROV3907;Bakhmut;;;;;;;;;;;;;
 PROV3908;Priluki;;;;;;;;;;;;;
-PROV3913;Shu;;;;;;;;;;;;;
+PROV3913;Sozaq;;;;;;;;;;;;;
 PROV3914;Kochkor;;;;;;;;;;;;;
 PROV3915;Atush;;;;;;;;;;;;;
 PROV3916;al-Ain;;;;;;;;;;;;;
