--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -392,9 +392,9 @@ EVTDESC834872328;\n\n$FROMCOUNTRY$ has accepted the exchange, and would cede Sou
 EVTDESC834872329;\n\n$FROMCOUNTRY$ has accepted the exchange, and will cede us the rest of the Pink Map.;;;;;;;;;;;;;
 EVTDESC83487234;\n\n$FROMCOUNTRY$ has proposed we pact an exchange so they can occupy the lands claimed in the Pink Map.;;;;;;;;;;;;;
 EVTDESC83487231;\n\n$FROMCOUNTRY$ has proposed we pact an exchange so they can occupy the lands claimed in the Pink Map.;;;;;;;;;;;;;
-EVTDESC97126;\n\n$FROMCOUNTRY$ are proposing a border and navigation treaty to resolve some of our border disputes with them.;;;;;;;;;;;;;
+EVTDESC97126;\n\n$FROMCOUNTRY$ are proposing a border and navigation treaty to resolve some of our border disputes with them. It involves the cession of the Paraguayan Misiones in exchange for the recognition of Paraguayan independence and us dropping all claims to the Chaco and Pilar. It also gives Paraguay rights to navigate through our rivers.;;;;;;;;;;;;;
 EVTDESC97127;\n\nThe government of $FROMCOUNTRY$ has agreed to sign the treaty!;;;;;;;;;;;;;
-EVTDESC97128;\n\n$FROMCOUNTRY$ has rejected the Derqui-Varela treaty and maintains their claim on Misiones;;;;;;;;;;;;;
+EVTDESC97128;\n\n$FROMCOUNTRY$ has rejected the Derqui-Varela treaty and maintains their claim on the Chaco.;;;;;;;;;;;;;
 EVTDESC46650;\n\n$FROMCOUNTRY$ is proposing a border treaty regarding our dispute in the Chaco, suggesting a compromise between both claims.;;;;;;;;;;;;;
 EVTDESC46651;\n\nThe government of $FROMCOUNTRY$ has agreed to sign the Decoud-Quijarro treaty, solving our border dispute in the Chaco;;;;;;;;;;;;;
 EVTDESC46652;\n\n$FROMCOUNTRY$ has rejected the Decoud-Quijarro treaty and maintains their claim on the Chaco!;;;;;;;;;;;;;
