little silly fixes

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2978,3 +2978,6 @@ NATIVEVENTONE;\n\nOur country borders Native American countries that accept nati
 colonization_america_test_one_title;Test Decision for Native-USA Mechanics;;;;;;;;;;;;;
 colonization_america_test_one_desc;DOESN'T HAVE EFFECTS OR USES, WORK IN PROGRESS. This decision is a test on how to use Dynamic Loc to code a new mechanic for the player. It does nothing and it won't close if you click it, you can try it out if you want.;;;;;;;;;;;;;
 MIRANDAMILITARYFORTS;\n\nBattles are about to start against Paraguay, and we must find a way to defend our borders from Solano, and at the same time finally depose him. Military officers have proposed we create military colonies in the Apa River north of Paraguay to defend our posts in the region from the Paraguayans. This should split Paraguayan forces north and therefore benefit our fight.;;;;;;;;;;;;;
+HATREDSOUTHPERU;\n\nThe Bolivians has been defeated and South Peru is once again ours.;;;;;;;;;;;;;
+JULIANAREP;\n\nThe forces of the Riograndense Republic, led by Italian revolutionary Giuseppe Garibaldi, with help from the local population, conquered parts of Santa Catarina, establishing a new republic.;;;;;;;;;;;;;
+ORBPUNOEVENT;\n\nAfter the collapse of Orbegoso's militias, we have been able to end the insurrection in the South of Peru and bring it once more to peace.;;;;;;;;;;;;;
