--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -124,7 +124,7 @@ PROV4093;Quili Malal;;;;;;;;;
 PROV4027;Chaotung;;;;;;;;;
 PROV518;Porto;;;;;;;;;
 PROV4026;Guarda;;;;;;;;;
-PROV4028;Preah Sihano    uk;;;;;;;;;
+PROV4028;Preah Seihanu;;;;;;;;;
 PROV4025;Kampong Thom;;;;;;;;;
 PROV522;Leiria;;;;;;;;;
 PROV4178;Kilai;;;;;;;;;
