--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -365,8 +365,8 @@ EVTDESC123883;\n\nAllying rebellious generals, Manuel Ignacio de Vivanco has dep
 EVTDESC123884;\n\nNow that the government has been defeated, we can take over.;;;;;;;;;;;;;
 EVTDESC1238841;\n\nNow that the government has been defeated, we can take over.;;;;;;;;;;;;;
 EVTDESC123885;\n\nColonel Mariano Ignacio Prado has wiped out the last governmental strongholds in the North, taking control of the country.;;;;;;;;;;;;;
-EVTDESC123886;\n\nColonel C¡ceres has wiped out the last governmental strongholds in the North, taking control of the country.;;;;;;;;;;;;;
-EVTDESC123887;\n\nRam³n Castilla has wiped out the last governmental strongholds in the North, taking control of the country.;;;;;;;;;;;;;
+EVTDESC123886;\n\nColonel Cáceres has wiped out the last governmental strongholds in the North, taking control of the country.;;;;;;;;;;;;;
+EVTDESC123887;\n\nRamón Castilla has wiped out the last governmental strongholds in the North, taking control of the country.;;;;;;;;;;;;;
 EVTDESC123888;\n\nNow that the rebel scum have been defeated, rebel sentiment is squelched.;;;;;;;;;;;;;
 EVTDESC100040001;\n\nA new first minister has been appointed.;;;;;;;;;;;;;
 EVTDESC100040120;\n\nOur first minister has been murdered!;;;;;;;;;;;;;
