thou shalt not bug (new river)

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1140,7 +1140,7 @@ PROV4107;Binaré;;;;;;;;;;;;;
 PROV4108;Laklanõ;;;;;;;;;;;;;
 PROV4109;Wapixana;;;;;;;;;;;;;
 PROV4110;Yulutakitsi;;;;;;;;;;;;;
-PROV4111;Ti'aî'a;;;;;;;;;;;;;
+PROV4111;Araguaia;;;;;;;;;;;;;
 PROV4112;Akroá;;;;;;;;;;;;;
 PROV4113;Correntina;;;;;;;;;;;;;
 PROV4114;Katueté;;;;;;;;;;;;;
