Russian colonial govs & colors. Rhodes blood libel
90% sure i got everthing for the colonial govs, rhodes blood libel still needs description

--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -593,3 +593,5 @@ XIN_colonial_company_4;Shinkyo Jichi-Seifu;;;;;;;;;;;;;
 YAK_colonial_company_4;Yakuto Jichi-Ku;;;;;;;;;;;;;
 GRE_colonial_company_4;Regno di Grecia;;;;;;;;;;;;;
 FIN_colonial_company_4;Hertigdömet Finland;;;;;;;;;;;;;
+KHI_colonial_company_4;Khivinskoye Khanstvo;;;;;;;;;;;;;
+BUK_colonial_company_4;Bukharskiy Emirat;;;;;;;;;;;;;
