--- a/GFM/localisation/Naimakka.csv
+++ b/GFM/localisation/Naimakka.csv
@@ -4,3 +4,7 @@ EVTOPTA48190001;¡Viva el Rey!;;;;;;;;;;;;;
 EVTNAME48190002;The Great Natchez Tornado;;;;;;;;;;;;;
 EVTDESC48190002;\n\nA massive tornado formed some twenty miles southwest of the city of Natchez and then followed the Mississippi River north, stripping both sides of the coast. The storm later struck at Natchez' river port, Natchez Landing, destroying the vast majority of the boats that were docked there and drowning their crews and passengers. The tornado destroyed almost all of Natchez Landing before moving towards Natchez proper, ruining many buildings in the central and northern parts of the city. On top of the destruction in Natchez, the damages also stretched into the town of Vidalia on the opposite side of the river. More than 300 people died and the property damage caused will take considerable time and resources to repair.;;;;;;;;;;;;;
 EVTOPTA48190002;Oh Good Heavens!;;;;;;;;;;;;;
+EVTNAME48190003;The $YEAR$ Rhodes Blood Libel;;;;;;;;;;;;;
+EVTDESC48190003;\n\nBlood libel not good;;;;;;;;;;;;;
+EVTOPTA48190003;Condemn the blood libel!;;;;;;;;;;;;;
+EVTOPTB48190003;Sign the firman;;;;;;;;;;;;;
