--- a/GFM More Cultures/localisation/00000culture submod.csv
+++ b/GFM More Cultures/localisation/00000culture submod.csv
@@ -1172,3 +1172,4 @@ tukano;Tukano;;;;;;;;;;;;
 guahibo;Guahibo;;;;;;;;;;;;
 pueblo;Pueblo;;;;;;;;;;;;
 mormon_culture;Mormon;;;;;;;;;;;;
+paikoka;Paikoka;;;;;;;;;;;;
