--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1063,7 +1063,7 @@ PROV4012;Kashijint;;;;;;;;;;;;;
 PROV4013;Iquitos;;;;;;;;;;;;;
 PROV4014;San Roque;;;;;;;;;;;;;
 PROV4015;Caballococha;;;;;;;;;;;;;
-PROV4016;Tena;;;;;;;;;;;;;
+PROV4016;Airopãi;;;;;;;;;;;;;
 PROV4017;San Carlos;;;;;;;;;;;;;
 PROV4018;San Fernando;;;;;;;;;;;;;
 PROV4019;Zapatoca;;;;;;;;;;;;;
@@ -1105,7 +1105,7 @@ PROV4064;Ho'néoxheóvaestse;;;;;;;;;;;;;
 PROV4065;Thóqàhyòp;;;;;;;;;;;;;
 PROV4066;Tarija;;;;;;;;;;;;;
 PROV4067;Gakaabikaang;;;;;;;;;;;;;
-PROV4070;Canelos;;;;;;;;;;;;;
+PROV4070;Archidona;;;;;;;;;;;;;
 PROV4071;Napuayllus;;;;;;;;;;;;;
 PROV4072;Contamana;;;;;;;;;;;;;
 PROV4073;Neiva;;;;;;;;;;;;;
