--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -1061,8 +1061,8 @@ KNY_constitutional_empire;Laikipia;;;;;;;;;;;;;;
 KNY_constitutional_empire_ADJ;Laikipian;;;;;;;;;;;;;;
 TUA;Tuareg;;;;;;;;;;;;;;
 TUA_ADJ;Tuareg;;;;;;;;;;;;;;
-BSG;Busoga;;;;;;;;;;;;;;
-BSG_ADJ;Busogan;;;;;;;;;;;;;;
+TAQ;Taqali;;;;;;;;;;;;;;
+TAQ_ADJ;Taqali;;;;;;;;;;;;;;
 Claim_Grenada_title;Reverse Reconquista;;;;;;;;;;;;;
 Claim_Grenada_desc;We must retake our rightful land stolen from us in 1492 and teach those Spanish a lesson!;;;;;;;;;;;;;
 Bcme_Grenada_title;Restore Al-Andalus;;;;;;;;;;;;;
